# log-plus

./: .gitignore  changelog.md  log-plus.cabal  versions
proto/LogPlus/: Paths.hs
src/: Log.hs
src/Log/: HasCallstack.hs  HasUTCTime.hs  LogEntry.hs  LogRenderOpts.hs  Render.hs
src/T/: Log.hs
t/: log-test.hs
