name:                log-plus

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.3.0
synopsis:            Logging, the way I like it
description:         Logging, the way I like it
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    Log
                    , Log.HasSeverity
                    , Log.HasUTCTime
                    , Log.LogEntry
                    , Log.LogRenderOpts
                    , Log.Render
                    , T.Log
  other-modules:
  default-extensions: ConstraintKinds
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , ImplicitParams
                    , InstanceSigs
                    , LambdaCase
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , NumericUnderscores
                    , OverloadedStrings
                    , RankNTypes
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      base, base-unicode-symbols, data-default, data-textual
                    , deepseq, dlist, exceptions, lens, logging-effect
                    , mono-traversable, mtl, prettyprinter
                    , prettyprinter-ansi-terminal, safe, tasty, tasty-hunit
                    , terminal-size, text, text-printer, time

                    , has-callstack >= 1.0.0.0
                    , monadio-plus  >= 1.4.2.0
                    , more-unicode  >= 0.0.13.0
                    , parsec-plus   >= 1.1.0.0
                    , parser-plus   >= 1.0.3.0
                    , single        >= 0.0.1.0
                    , tasty-plus    >= 1.4.2.0
                    , tfmt          >= 0.2.4.0

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite fpath-test
  default-extensions: NoImplicitPrelude
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            log-test.hs
  build-depends:      base, log-plus, tasty
  default-language:   Haskell2010

-------------------------------------------------------------------------------
