name:                log-plus

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.4.5
synopsis:            Logging, the way I like it
description:         Logging, the way I like it
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    Log
                    , Log.HasSeverity
                    , Log.HasUTCTime
                    , Log.LogEntry
                    , Log.LogRenderOpts
                    , Log.Render
                    , T.Log
  other-modules:      LogPlus.Paths
  default-extensions: ConstraintKinds
                    , DeriveFunctor
                    , DeriveGeneric
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , ImplicitParams
                    , ImportQualifiedPost
                    , InstanceSigs
                    , LambdaCase
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , NumericUnderscores
                    , OverloadedStrings
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , QuasiQuotes
                    , RankNTypes
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      base, base-unicode-symbols, data-default, data-textual
                    , deepseq, dlist, exceptions, lens, logging-effect
                    , mono-traversable, mtl, pcre-heavy, prettyprinter
                    , prettyprinter-ansi-terminal, safe, tasty, tasty-hunit
                    , terminal-size, text, text-printer, time, unix

                    , base1         >= 0.0.12.0
                    , fpath         >= 1.3.5.0
                    , has-callstack >= 1.0.2.0
                    , monaderror-io >= 1.2.6.0
                    , monadio-plus  >= 2.6.0.0
                    , more-unicode  >= 0.0.26.0
                    , natural       >= 0.1.2.0
                    , parsec-plus   >= 1.1.1.44
                    , parser-plus   >= 1.0.7.29
                    , single        >= 0.0.1.0
                    , tasty-plus    >= 1.5.2.24
                    , tfmt          >= 0.3.1.0

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------

executable logit
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  -- add +RTS -xc -KK for 1K stack
  -- add ?RTS -xt -hy to produce a usage graph
  main-is:             logit.hs
  hs-source-dirs:      bin
  build-depends:       base, optparse-applicative, text

                     , base1, fpath, monaderror-io
                     , monadio-plus, optparse-plus >= 1.3.4.0

                     , log-plus
  default-extensions:  NoImplicitPrelude, LambdaCase, UnicodeSyntax
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite log-plus-test
  default-extensions: NoImplicitPrelude
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            log-test.hs
  build-depends:      base, log-plus, tasty
  default-language:   Haskell2010

-------------------------------------------------------------------------------
